# homebrew-turia

./: .gitignore  README.md  RELEASE.md  pyproject.toml  turia
Formula/: turia.rb
scripts/: VALIDATION_README.md  global_vars.sh  pre-commit-validation
scripts/agent/: agent.sh  agent_api.sh  agent_auth.sh  agent_chat.sh  agent_config.sh  agent_local_tools.sh  agent_rag.sh  agent_subagents.sh  agent_ui.sh  chat.py
scripts/agent/tests/: run_all.sh  test_compatibility.py  test_functional.py  test_imports.py  test_startup_flow.py  test_tools.py  test_ui_safety.py
scripts/agent/turia_chat/: __init__.py  __main__.py  container.py
scripts/android/: android.sh  android_create_new_project.sh  android_support.sh  android_template.sh
scripts/flutter/: flutter.sh  flutter_create_new_project.sh  flutter_support.sh  flutter_template.sh
scripts/ios/: ios.sh  ios_create_new_project.sh  ios_support.sh  ios_template.sh
scripts/ios/ruby/: check_version_xcode.rb  copy_and_add_xcode.rb  copy_and_add_xcode_integrated.rb  turia_dependencies.rb
scripts/python/: python.sh  python_create_project.sh  python_install.py  python_support.sh  python_template.sh
scripts/support/: bitbucket_repo.sh  claude_launcher.sh  claude_pool.conf  general_support.sh  git.sh  logo.sh  network.sh  os.sh  validation.sh
scripts/support/ios/templates/: data_datasource_dto  data_datasource_impl  data_datasource_protocol  data_repository  di_container  domain_entity  domain_repository  domain_usecase  presentation_builder  presentation_view  presentation_viewmodel
(+123 files in other folders)
